--- a/imgui.ini
+++ b/imgui.ini
@@ -1,15 +1,15 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=924,21
+Size=207,281
 Collapsed=0
 
 [Window][Information]
 Pos=5,5
-Size=466,342
+Size=410,793
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=556,12
+Pos=650,19
 Size=550,781
 Collapsed=0
 
@@ -50,5 +50,15 @@ Collapsed=0
 [Window][Style Editor]
 Pos=60,60
 Size=353,794
+Collapsed=0
+
+[Window][Block]
+Pos=10,100
+Size=523,316
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=466,391
 Collapsed=0
 
