--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "externals/spdlog"]
 	path = externals/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "externals/implot"]
+	path = externals/implot
+	url = https://github.com/epezent/implot
