just in case i break everything.

--- a/Projects/Fibonacci Sphere/imgui.ini
+++ b/Projects/Fibonacci Sphere/imgui.ini
@@ -1,10 +1,18 @@
 [Window][Debug##Default]
-Pos=801,-1
-Size=400,400
+ViewportPos=1597,65
+ViewportId=0x9F5F46A1
+Size=255,294
 Collapsed=0
 
 [Window][Information]
-Pos=5,5
-Size=311,845
+Pos=0,1
+Size=288,581
 Collapsed=0
+
+[Window][Options]
+Pos=992,0
+Size=208,152
+Collapsed=0
+
+[Docking][Data]
 
