--- a/Projects/Quasicrystals/imgui.ini
+++ b/Projects/Quasicrystals/imgui.ini
@@ -1,10 +1,20 @@
 [Window][Debug##Default]
-Pos=838,7
+Pos=826,31
 Size=365,259
 Collapsed=0
 
 [Window][Information]
-Pos=5,5
-Size=270,273
+Pos=63,67
+Size=370,550
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][Options]
+Pos=63,67
+Size=370,550
+Collapsed=0
+DockId=0x00000001,1
+
+[Docking][Data]
+DockNode  ID=0x00000001 Pos=63,96 Size=370,550 Selected=0xAFE59754
 
