Integrate tracy Small refactor of planet gen

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "externals/implot"]
 	path = externals/implot
 	url = https://github.com/epezent/implot
+[submodule "tracy"]
+	path = tracy
+	url = https://github.com/wolfpld/tracy
