--- a/.gitmodules
+++ b/.gitmodules
@@ -24,5 +24,5 @@
 	path = externals/implot
 	url = https://github.com/epezent/implot
 [submodule "tracy"]
-	path = tracy
+	path = externals/tracy
 	url = https://github.com/wolfpld/tracy
