--- a/World/imgui.ini
+++ b/World/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=785,3
-Size=406,197
+Pos=657,-2
+Size=414,243
 Collapsed=0
 
 [Window][Information]
 Pos=5,5
-Size=312,160
+Size=376,162
 Collapsed=0
 
