Improve gui and add the ability to re-generate without restarting

--- a/World/imgui.ini
+++ b/World/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=657,-2
-Size=414,243
+Pos=6,171
+Size=296,351
 Collapsed=0
 
 [Window][Information]
 Pos=5,5
-Size=376,162
+Size=297,163
 Collapsed=0
 
